--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers.js"></script>
     <script src="app/js/services.js"></script>
